# intent-engine

./: .gitattributes  .gitignore  AGENT.md  AI_QUICK_GUIDE.md  BUILD_RS_DESIGN.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  FIX_RELEASE_BLOCKERS.md  FIX_SUMMARY.md  HTTP_SHUTDOWN_IMPLEMENTATION_PLAN.md  HTTP_SHUTDOWN_MIGRATION_COMPLETE.md  HTTP_SHUTDOWN_MIGRATION_STATUS.md  INSTALL_LOCALLY.md  LICENSE-APACHE  LICENSE-MIT  MCP_SETUP.md  MIGRATION_PYTHON_TO_RUST_MCP.md  MIGRATION_REPORT.md  MIGRATION_v0.10.0.md  Makefile  PERFORMANCE.md  PHASE2_IMPLEMENTATION_PLAN.md  PRE_RELEASE_TEST_REPORT.md  PR_DESCRIPTION.md  PR_DESCRIPTION_0.1.7.md  QUICKSTART.en.md  QUICKSTART.md  README.en.md  README.md  README.md.backup  RELEASE_NOTES_v0.6.0.md  Readme.zh.md  SMART_INITIALIZATION_SUMMARY.md  TEST_COVERAGE_ANALYSIS.md  TEST_COVERAGE_GAPS.md  TEST_REWRITE_PLAN.md  THE_INTENT_ENGINE_WAY.md  VERIFICATION_REPORT.md  VERIFY_IE_BINARY.md  (+20 more)
.cargo/: audit.toml
.claude-code/: SessionStart  intent-engine.skill.md
.claude-plugin/: marketplace.json
.claude/skills/: prompt-testing.md
.github/: AUTO_FORMATTING_SOLUTION.md  CI-VERIFICATION.md  CI_OVERVIEW.md  FORMATTING_GUIDE.md  MANUAL_BUILD_GUIDE.md  QUICK_START_CODECOV.md  dependabot.yml  labeler.yml
.github/workflows/: _build-release.yml  _setup-rust.yml  _test-suite.yml  changelog.yml  ci.yml  codecov.yml  homebrew.yml  labeler.yml  manual-build.yml  npm.yml  release-pr.yml  release.yml  stale.yml  validate-translations.yml  version-bump.yml
.intent-engine/: project.db
.opencode/commands/: prompt-testing.md
.serena/: project.yml
.serena/memories/: code_style_and_conventions.md  codebase_structure.md  project_overview.md  suggested_commands.md  system_utilities.md  task_completion_checklist.md
benches/: performance.rs
claude-plugin/.claude-plugin/: plugin.json
claude-plugin/hooks/: hooks.json
claude-plugin/scripts/: session-start.js  session-start.ps1  session-start.sh
docs/: CI_REFACTOR_SUMMARY.md  INTENT_ENGINE_PROTOCOL.md  INTERFACE_SPEC.md  MIGRATION_v0.2.md  OWNER_MECHANISM.md  PLAN_INTERFACE_GUIDE.md  PROTOCOL_GAP_ANALYSIS.md  PROTOCOL_IMPLEMENTATION_GAP.md  PROTOCOL_MIGRATION_PLAN.md  PUBLISH_TO_CRATES_IO.md  SPEC.md  TESTING_RELEASE.md  analysis-01-main-coverage.md  architecture-02-speckit-guardian.md  architecture-03-cli-hybrid-command.md  dashboard-api-reference.md  dashboard-user-guide.md  design-task-crud.md  enhancement-01-doctor-command.md  logging-guide.md  phase1-completion-report.md  phase1-focus-restoration-spec.md  phase1-implementation-summary.md  phase1-testing-spec.md  requirement_spec_v0.2.0.md  roadmap.md  spec-01-legacy-v0.2-zh.md  spec-03-interface-current.md  speckit-guardian.md  sub-agent-architecture.md  system_prompt.md  task_workflow_analysis.md  web-dashboard-spec.md
docs/ai_feedback/: 2025-11-14-claude-long-term-usage-experience.md  2025-11-17-tool-integration-paradigms-mcp-vs-training.md  README.md
docs/archive/: MIGRATION_v0.10.0.md  OWNER_MECHANISM.md  RELEASE_NOTES_v0.10.0.md  design-multi-session-focus.md  mcp-setup-improvements.md
docs/deployment/: logrotate.conf
docs/design/: llm-use-cases.md
docs/help/: plan.md  user-guide.md
docs/zh-CN/: 简洁系统架构.md
examples/: windows-utf8-example.bat  windows-utf8-example.ps1
front-end/: index.html  package-lock.json  package.json  vite.config.ts
front-end/src/: main.ts
frontend-v2/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend-v2/scripts/: debug_remote.js
frontend-v2/src/: App.vue  style.css
homebrew/: README.md  intent-engine.rb
homebrew-tap-template/: README.md
homebrew-tap-template/Formula/: intent-engine.rb
npm/intent-engine/: package.json
npm/intent-engine-darwin-arm64/: package.json
npm/intent-engine-darwin-x64/: package.json
npm/intent-engine-linux-arm64/: package.json
npm/intent-engine-linux-x64/: package.json
npm/intent-engine-win32-x64/: package.json
opencode-plugin/: README.md  intent-engine.ts  package.json
scripts/: README.md  SPLIT_PLAN_README.md  VERSION_PLACEHOLDERS.md  auto-setup-hooks.sh  check-format.sh  check-release-status.sh  check-version-sync.sh  ci-local.sh  ci-quick.sh  debug-hook-setup.sh  fix-hook-setup.sh  generate-system-prompt.sh  install-git-hooks.sh  install-local.sh  release.sh  replace-version-placeholders.sh  restore-version-placeholders.sh  setup-git-hooks.sh  split-plan-rs.sh  sync-mcp-tools.sh  test-release.sh  trace-claude-hooks.sh  translate-docs.sh  update-homebrew-formula.sh  verify-ci.sh  verify-ie-build.sh  watch-claude-access.sh
scripts/git-hooks/: README.md  pre-commit
scripts/install/: ie-manager.ps1  ie-manager.sh  (+3 more)
src/: backend.rs  cli.rs  cli_backup.rs  dependencies.rs  error.rs  events.rs  global_projects.rs  lib.rs  llm.rs  logging.rs  logs.rs  main.rs  main_backup.rs  notifications.rs  plan.rs  plan_validation.rs  priority.rs  project.rs  report.rs  search.rs  session_restore.rs  sql_constants.rs  tasks.rs  test_utils.rs  time_utils.rs  windows_console.rs  workspace.rs
static/: index.html
templates/: format-ie-output.sh  session-start.sh
tests/: cascade_tests.rs  cjk_search_tests.rs  cli_notifier_tests.rs  cli_special_chars_tests.rs  cli_tests.rs  dashboard-ui-test-suite.md  dashboard_cli_tests.rs  dashboard_integration_test.rs  dashboard_integration_tests.rs  dependency_tests.rs  doctor_cli_tests.rs  doctor_command_tests.rs  error_handling_tests.rs  event_filtering_tests.rs  focus_switching_tests.rs  init_cli_tests.rs  init_command_tests.rs  integration_tests.rs  interface_spec_test.rs  logging_integration_test.rs  logging_mcp_test.rs  logging_rotation_test.rs  logs_cli_tests.rs  logs_integration_test.rs  main_coverage_tests.rs  manual_plan_test.rs  mcp_integration_test.rs  mcp_task_add_dependency_tests.rs  mcp_tools_sync_test.rs  neo4j_integration_tests.rs  nested_project_test_matrix.md  owner_mechanism_tests.rs  performance_large_dataset_tests.rs  performance_tests.rs  pick_next_blocking_tests.rs  priority_and_list_tests.rs  protocol_compliance_tests.rs  report_cli_tests.rs  search_cli_tests.rs  setup_cli_tests.rs  (+9 more)
(+428 files in other folders)
