[package]
name = "intent-engine"
version = "0.1.13"
edition = "2021"
authors = ["Intent Engine Contributors"]
description = "A command-line database service for tracking strategic intent, tasks, and events"
license = "MIT OR Apache-2.0"
repository = "https://github.com/wayfind/intent-engine"
homepage = "https://github.com/wayfind/intent-engine"
documentation = "https://docs.rs/intent-engine"
readme = "README.md"
keywords = ["cli", "task-management", "intent", "database", "workflow"]
categories = ["command-line-utilities", "database"]
default-run = "intent-engine"

# cargo-binstall configuration
# Helps cargo-binstall automatically download the right binary for your platform
[package.metadata.binstall]
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-linux-x86_64.tar.gz"

[package.metadata.binstall.overrides.aarch64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-linux-aarch64.tar.gz"

[package.metadata.binstall.overrides.x86_64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-macos-x86_64.tar.gz"

[package.metadata.binstall.overrides.aarch64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-macos-aarch64.tar.gz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-windows-x86_64.exe.zip"
pkg-fmt = "zip"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
encoding_rs = "0.8"

# Windows console support
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_System_Console"] }

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"
criterion = { version = "0.7", features = ["async_tokio"] }
rand = "0.8"

[[bin]]
name = "intent-engine"
path = "src/main.rs"

[[bin]]
name = "intent-engine-mcp-server"
path = "src/bin/mcp-server.rs"

[[bench]]
name = "performance"
harness = false
