[package]
name = "intent-engine"
version = "0.8.1"
edition = "2021"
rust-version = "1.82"
authors = ["Intent Engine Contributors"]
description = "A command-line database service for tracking strategic intent, tasks, and events"
license = "MIT OR Apache-2.0"
repository = "https://github.com/wayfind/intent-engine"
homepage = "https://github.com/wayfind/intent-engine"
documentation = "https://docs.rs/intent-engine"
readme = "README.md"
keywords = ["cli", "task-management", "intent", "database", "workflow"]
categories = ["command-line-utilities", "database"]
default-run = "ie"

# cargo-binstall configuration
# Helps cargo-binstall automatically download the right binary for your platform
[package.metadata.binstall]
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-linux-x86_64.tar.gz"

[package.metadata.binstall.overrides.aarch64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-linux-aarch64.tar.gz"

[package.metadata.binstall.overrides.x86_64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-macos-x86_64.tar.gz"

[package.metadata.binstall.overrides.aarch64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-macos-aarch64.tar.gz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-windows-x86_64.exe.zip"
pkg-fmt = "zip"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
const_format = "0.2"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "chrono"] }
tracing-appender = "0.2"
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
encoding_rs = "0.8"
which = "8.0"
dialoguer = "0.11"
dirs = "6.0"
atty = "0.2"
axum = { version = "0.7", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
rust-embed = "8.0"
mime_guess = "2.0"
open = "5.3"
tokio-tungstenite = "0.24"
futures-util = "0.3"
reqwest = { version = "0.11", default-features = false, features = ["json", "blocking", "rustls-tls"] }
rand = "0.9"

# Unix process management
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Windows console support
[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = ["Win32_System_Console"] }

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"
criterion = { version = "0.7", features = ["async_tokio"] }
rand = "0.9"
serial_test = "3.0"
filetime = "0.2"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }

[[bin]]
name = "ie"
path = "src/main.rs"

[[bench]]
name = "performance"
harness = false
